--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <title>StudyHub</title>
     
     <!-- Add favicon -->
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/Favicon.png') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
